--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,8 +1,5 @@
 .header {
     width: 100%;
-    /* position: fixed; */
-    top: 0;
-    z-index: 999;
 }
 .nav {
     height: 60px;
@@ -12,7 +9,8 @@
     padding-inline: var(--spacer);
     box-shadow: var(--boxShadow-sm-bottom);
 }
-.logo {
+.logo svg {
+    height: 30px;
     padding-right: var(--spacer);
 }
 .navLinks {
