Add image skeleton, loading animation and infinite scroll

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -25,7 +25,7 @@
     height: 25px;
     top: 5px;
     margin-left: var(--spacer);
-    background: url('../assets/usuario.svg') no-repeat center;
+    background: url('../assets/user.svg') no-repeat center;
     
 }
     
