--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 
   --borderRadius-sm: 5px;
   --borderRadius-md: 10px;
+  --borderRadius-lg: 30em;
 
   --transition: all 250ms cubic-bezier(0.42, 0, 0.58, 1);
   --timingFunction: cubic-bezier(0.645, 0.045, 0.355, 1);
