Add user PropTypes, head title, 404 error and reset password routes

--- a/src/components/photo/PhotoCommentsForm.module.css
+++ b/src/components/photo/PhotoCommentsForm.module.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     margin: var(--spacer-sm);
 }
+.single.form {
+    margin-inline: 0;
+}
 .textarea {
     display: block;
     width: 100%;
