--- a/src/components/photo/PhotoContent.module.css
+++ b/src/components/photo/PhotoContent.module.css
@@ -2,10 +2,11 @@
   height: 550px;
   margin: auto;
   display: grid;
-  grid-template-columns: 550px 400px;
+  grid-template-columns: 550px 350px;
   grid-template-rows: auto 1fr auto;
   border-radius: var(--borderRadius-sm);
   background: var(--color-bg);
+  box-shadow: var(--boxShadow-md);
   overflow: hidden;
   opacity: 0;
   transform: scale(0.8);
@@ -19,23 +20,58 @@
 }
 .single.photo {
   grid-template-columns: 1fr;
+  height: auto;
 }
 .details {
-  padding-inline: var(--spacer-md);
-  padding-top: var(--spacer-md);
+  padding-inline: var(--spacer);
 }
 .img {
   grid-row: 1/4;
 }
 .single .img {
   grid-row: 1;
+  overflow: hidden;
+}
+.author {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+  opacity: .5;
+}
+.visualizations::before {
+  content: "";
+  width: 25px;
+  height: 20px;
+  top: 15px;
+  display: inline-block;
+  margin-right: var(--spacer);
+  -webkit-mask: url("../../assets/visualization.svg") no-repeat 50% 50%;
+  mask: url("../../assets/visualization.svg") no-repeat 50% 50%;
+  background-color: var(--color-text);
+}
+.title {
+  margin: 0;
+}
+.attributes {
+  display: flex;
+  gap: var(--spacer-md);
+}
+.attributes li:first-child::after {
+  content: "";
+  display: inline-block;
+  position: relative;
+  height: 25px;
+  width: 5px;
+  top: 5px;
+  margin-left: var(--spacer-md);
+  background-color: var(--color-secondary);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
   .photo {
     height: auto;
     max-height: calc(100vh - var(--spacer-lg));
-    grid-template-columns: minmax(250px, 400px);
+    grid-template-columns: minmax(200px, 400px);
   }
   .img {
     grid-row: 1;
