--- a/src/components/photo/PhotoComments.module.css
+++ b/src/components/photo/PhotoComments.module.css
@@ -1,10 +1,31 @@
+.content {
+  display: grid;
+  grid-template-rows: 150px auto;
+}
+
 .comments {
-  overflow-y: scroll;
+  overflow: auto;
   word-break: break-word;
   padding: var(--spacer-md);
-  height: clamp(5rem, 5vw, 10rem);
+  font-size: 1rem;
 }
+
 .comment {
   margin-bottom: 5px;
   line-height: 1.2;
+}
+
+.message {
+  font-size: 0.8rem;
+  padding: var(--spacer-md);
+}
+
+.link {
+  color: var(--color-accent);
+}
+
+@media screen and (max-width: 50rem) {
+  .content {
+   
+  }
 }
