--- a/src/components/photo/PhotoContent.module.css
+++ b/src/components/photo/PhotoContent.module.css
@@ -1,9 +1,8 @@
 .photo {
-  height: 500px;
   margin: auto;
   display: grid;
-  grid-template-columns: 500px 400px;
-  grid-template-rows: auto 1fr auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
   border-radius: var(--borderRadius-sm);
   background: var(--color-bg);
   box-shadow: var(--boxShadow-md);
@@ -12,55 +11,64 @@
   transform: scale(0.8);
   animation: scaleUp 0.3s forwards;
 }
+
 @keyframes scaleUp {
   to {
     opacity: initial;
     transform: initial;
   }
 }
+
 .single.photo {
   grid-template-columns: 1fr;
   height: auto;
 }
+
 .details {
-  padding-top: var(--spacer-md);
   padding-inline: var(--spacer-md);
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto auto auto;
 }
+
 .img {
-  grid-row: 1/4;
+  grid-row: 1/3;
 }
+
 .single .img {
   grid-row: 1;
-  overflow: hidden; 
+  overflow: hidden;
 }
+
 .author {
   display: flex;
   justify-content: space-between;
   margin-bottom: 0;
   opacity: .5;
 }
+
 .visualizations::before {
   content: "";
   width: 25px;
   height: 20px;
-  /* top: 15px; */
   display: inline-block;
   margin-right: var(--spacer);
   -webkit-mask: url("../../assets/visualization.svg") no-repeat 50% 50%;
   mask: url("../../assets/visualization.svg") no-repeat 50% 50%;
   background-color: var(--color-text);
 }
+
 .title {
   margin: 0;
 }
+
 .attributes {
   display: flex;
   gap: var(--spacer-md);
   padding-bottom: var(--spacer);
 }
+
+.attributes li:last-child {
+  padding-top: 4px;
+}
+
 .attributes li:first-child::after {
   content: "";
   display: inline-block;
@@ -72,14 +80,19 @@
   background-color: var(--color-secondary);
 }
 
-@media screen and (max-width: 64rem) {
+@media screen and (max-width: 50rem) {
   .photo {
-    height: auto;
-    max-height: calc(100vh - var(--spacer-lg));
-    grid-template-columns: minmax(400px, 300px);
-    overflow-y: auto;
+    margin: 1rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    overflow-y: scroll;
   }
+
   .img {
-    grid-row: 1;
+    grid-row: 1/2;
+  }
+
+  .details {
+    grid-row: 2/3;
   }
 }
